--- a/main.css
+++ b/main.css
@@ -13,11 +13,18 @@
   left: 0;
   top: 0;
 
+  text-align: center;
+
 
   background-image: url("./images/constructBg.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+#splash-red-triangle {
+  width: 75px;
+  margin: 0 auto;
 }
 
 
@@ -26,12 +33,43 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: gray;
+  margin-top: 100px;
+  padding: 0;
+  color: white;
+}
 
+#splash-headline > ul > li > * {
+  margin: 0;
 }
 
 #splash-star {
   width: 200px;
+}
+
+#headline {
+  font-size: 55px;
+  padding: 25px 0;
+}
+
+#headline-field {
+  font-size: 35px;
+  font-weight: lighter;
+  padding-bottom: 75px;
+}
+
+#headline-phone {
+  font-size: 45px;
+  color: #cc4c33;
+}
+
+#headline-start-btn {
+  border: solid 1px white;
+  color: white;
+  background-color: #243644;
+  margin-top: 50px !important;
+  padding: 15px;
+  width: 200px;
+  cursor: pointer;
 }
 
 li {
