--- a/main.css
+++ b/main.css
@@ -130,7 +130,6 @@ li {
 
   #headline-field {
     font-size: 1.5em;
-
     padding-bottom: 50px;
   }
 
@@ -173,17 +172,18 @@ li {
   margin-top: -8px;
   background-image: url("./images/bigStar.png");
   background-position: top;
-  background-size: 40%;
+  background-size: 50%;
   background-repeat: no-repeat;
   background-color: #243644;
-
+  color: white;
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
+  align-items: center;
+  flex-direction: column;
 }
 
 
 #project-header {
-  background-color: gray;
   height: fit-content;
   margin-top: 50px;
   display: flex;
@@ -191,18 +191,75 @@ li {
 }
 
 #project-header > div {
-  /* flex: 0 0 33.333333%; */
   flex: 1;
 }
 
 #project-title {
-  padding-right: 25px;
+  font-size: 55px;
+  padding-right: 40px;
   border-right: .5px solid white;
+  color: #cc4c33;
 }
 
-
 #project-header-details {
-  padding-left: 25px;
-  /* background-color: yellow; */
+  font-size: 30px;
+  padding-left: 50px;
   border-left: .5px solid white;
+  line-height: 25px;
+}
+
+#project-header-details > span {
+  font-size: 15px;
+}
+
+/* PROJECT TILES */
+#project-tiles {
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+}
+
+.tile1 {
+  background: url(/images/sidewalk1.jpg);
+  box-shadow: inset 0 0 0 2000px #cc4c33b9;
+}
+.project {
+  margin: 5px;
+  height:200px;
+  width: 200px;
+  object-fit: cover;
+}
+
+@media only screen and (max-width: 1024px) {
+
+  #project-header {
+    flex-direction: column;
+    /* background-color: gray; */
+    margin: 0 15px;
+  }
+  #projects {
+    background-size: 80%;
+  }
+
+  #project-title {
+    font-size: 45px;
+    padding-right: 0px;
+    border-right:  none;
+    border-bottom: 1px solid white;
+    margin-top: 25px;
+  }
+
+  #project-header-details {
+    font-size: 30px;
+    padding-left: 0px;
+    border-left: none;
+    line-height: 25px;
+  }
+
+  #project-header-details > span {
+    font-size: 15px;
+  }
+
 }
