--- a/main.css
+++ b/main.css
@@ -189,7 +189,7 @@ li {
   justify-content: space-between;
 }
 
-#project-header > div {
+#project-header>div {
   flex: 1;
 }
 
@@ -207,7 +207,7 @@ li {
   line-height: 25px;
 }
 
-#project-header-details > span {
+#project-header-details>span {
   font-size: 15px;
 }
 
@@ -224,9 +224,10 @@ li {
   background: url(/images/sidewalk1.jpg);
   box-shadow: inset 0 0 0 2000px #cc4c33b9;
 }
+
 .project {
   margin: 5px;
-  height:200px;
+  height: 200px;
   width: 200px;
   object-fit: cover;
 }
@@ -235,9 +236,11 @@ li {
   #projects {
     padding-bottom: 50px;
   }
+
   #project-header {
     flex-direction: column;
   }
+
   #projects {
     background-size: 80%;
   }
@@ -245,7 +248,7 @@ li {
   #project-title {
     font-size: 45px;
     padding-right: 0px;
-    border-right:  none;
+    border-right: none;
     border-bottom: 1px solid white;
     margin-top: 25px;
   }
@@ -257,7 +260,7 @@ li {
     line-height: 25px;
   }
 
-  #project-header-details > span {
+  #project-header-details>span {
     font-size: 15px;
   }
 
@@ -269,13 +272,25 @@ li {
 @media only screen and (max-width: 480px) {
   .project {
     margin: 5px;
-    height:150px;
+    height: 150px;
     width: 150px;
     object-fit: cover;
   }
 }
 
 /* ABOUT */
+#owner {
+  position: absolute;
+  left: 0;
+}
+
+#about-bottom-border {
+  margin-left: -8px;
+  margin-top: -8px;
+  width: 100vw;
+  z-index: -1;
+}
+
 #about {
   width: 100vw;
   min-height: 80vh !important;
@@ -286,6 +301,7 @@ li {
   display: flex;
   align-items: center;
   flex-direction: column;
+  background-image: url("/images/grittyBg.jpg");
 }
 
 .about-header {
@@ -301,6 +317,7 @@ li {
   color: #cc4c33;
   width: 200px !important;
 }
+
 .about-details {
   font-size: 25px;
   border-left: .5px solid white;
@@ -308,6 +325,7 @@ li {
   height: 300px;
   padding-top: 25px;
   width: 750px !important;
+  padding-left: 25px;
 }
 
 
@@ -318,7 +336,7 @@ li {
   text-align: right;
 }
 
-.about-call > span {
+.about-call>span {
   color: #cc4c33;
   font-size: 37px;
 }
@@ -328,10 +346,13 @@ li {
   width: 750px !important;
 }
 
-.detail-lists > ul {
+.detail-lists>ul {
   padding: 0;
 }
 
+#service {
+  margin: 25px 0 25px 125px;
+}
 
 #service-header {
   color: #cc4c33;
@@ -339,6 +360,104 @@ li {
   display: flex;
 }
 
+#service-lists {
+  display: flex;
+  font-size: 20px;
+}
+
+#service-lists>ul>li {
+  margin: 5px 0;
+}
+
 .list-bullet {
   height: 12px;
+  margin-right: 5px;
+}
+
+
+@media only screen and (max-width: 1024px) {
+  .about-header {
+    background-image: url("/images/grittyBg.jpg");
+    flex-direction: column;
+    width: 100vw;
+    padding-bottom: 50px;
+  }
+
+  .about-title {
+    font-size: 55px;
+    color: #cc4c33;
+    width: auto !important;
+  }
+
+  .about-details {
+    border-top: .5px solid white;
+    border-left: none;
+    width: 95% !important;
+    padding-left: 0;
+  }
+
+  #service {
+    margin: 0;
+    width: 95%;
+  }
+
+  .about-call {
+    font-size: 20px;
+    width: 95% !important;
+    text-align: center;
+    padding: 25px 0;
+    border-top: 1px solid white;
+  }
+
+  .about-call>span {
+    color: #cc4c33;
+    font-size: 37px;
+  }
+
+  .detail-lists {
+    display: flex;
+    width: 750px !important;
+  }
+
+  .about-details {
+    font-size: 25px;
+    border-left: none;
+    line-height: 30px;
+    height: 300px;
+    padding-top: 25px;
+    width: 95% !important;
+    padding-left: 25px;
+    height: fit-content;
+  }
+
+  .detail-lists {
+    display: flex;
+    flex-direction: column;
+    width: inherit !important;
+  }
+
+  .detail-lists  > ul > li {
+    list-style: disc;
+  }
+}
+
+/* CONTACT */
+#contact {
+  background-image: url("./images/mapBg.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100vw;
+  min-height: 80vh !important;
+  margin-left: -8px;
+  margin-top: -95px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+
+form {
+  background-color: gray;
+
 }
