--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@
 
 body {
   overflow-x: hidden !important;
+  margin: 0;
 }
 
 #splash-main {
@@ -304,6 +305,15 @@ li {
   background-image: url("/images/grittyBg.jpg");
 }
 
+@media only screen and (max-width:1840px) and (min-width:1024px) {
+  #about-bottom-border {
+    display: none;
+  }
+  #about {
+    min-height: 1100px !important;
+  }
+}
+
 .about-header {
   height: fit-content;
   display: flex;
@@ -436,7 +446,7 @@ li {
     width: inherit !important;
   }
 
-  .detail-lists  > ul > li {
+  .detail-lists>ul>li {
     list-style: disc;
   }
 }
@@ -452,12 +462,110 @@ li {
   margin-left: -8px;
   margin-top: -95px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
+
+bottom: 0;
+}
+
+#contact>* {
+  margin: 0 50px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  color: white;
+  font-size: 20px;
+  width: 350px;
+}
+
+#form-header {
+  font-weight: bolder;
+  font-size: 35px;
+  text-align: center;
+  margin-bottom: 25px;
+}
+
+.input-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+input,
+textarea {
+  border: none;
+  height: 45px;
+  width: 275px;
+  margin: 5px 0 5px 5px;
+}
+
+textarea {
+  height: 100px;
+}
+
+#form-btn {
+  border: 1px solid white;
+  background-color: #cf5033;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  padding: 18px;
+  margin: 15px auto 0 auto;
+}
+
+#contact-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  margin-left: 150px;
+  font-size: 15px;;
+}
+
+#map-pin {
+  width: 60px;
+  margin-top: 110px;
+}
+
+#contact-num {
+  letter-spacing: 5px;
+  font-size: 50px;
+  margin-top: 100px;
+  font-weight: bolder;
 }
 
 
-form {
-  background-color: gray;
+@media only screen and (max-width: 1024px) {
+  #contact {
+    flex-direction: column;
+    margin-top: -95px;
+  }
 
+  form {
+    width: 95%;
+    margin-top: 100px !important;
+  }
+
+  .input-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #contact-details {
+  margin: 0 auto;
+  padding-bottom: 45px;
+  }
+
+  #contact-num {
+    font-size: 50px;
+    margin-top: 50px;
+    text-align: center;
+}
+
+  #map-pin {
+    display: none;
+  }
 }
