--- a/main.css
+++ b/main.css
@@ -283,6 +283,7 @@ li {
 #owner {
   position: absolute;
   left: 0;
+  margin-top: 100px;
 }
 
 #about-bottom-border {
@@ -386,6 +387,9 @@ li {
 
 
 @media only screen and (max-width: 1024px) {
+  #owner {
+    display: none;
+  }
   .about-header {
     background-image: url("/images/grittyBg.jpg");
     flex-direction: column;
