--- a/main.css
+++ b/main.css
@@ -8,7 +8,51 @@
 
 body {
   overflow-x: hidden !important;
-  margin: 0;
+  /* margin: 0 auto; */
+}
+
+#social-btns {
+  position: absolute;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  top: 20%;
+}
+
+.icon {
+  height: 30px !important;
+  width: 30px !important;
+  margin: 5px;
+  padding: 5px;
+}
+
+.gray {
+  background-color: gray;
+}
+
+#contact-icon {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30px;
+  background-color: #af3415;
+  font-weight: lighter;
+  padding: 10px 0 10px 5px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.fb-blue {
+  background-color: #507cc0;
+}
+
+.twitter-blue {
+  background-color: #63cef1;
+}
+
+.google-red {
+  background-color: #e14103;
 }
 
 #splash-main {
@@ -117,6 +161,19 @@ li {
 }
 
 @media only screen and (max-width: 1024px) {
+  #contact-icon {
+    width: 35px;
+  }
+
+  #social-btns {
+    top: 5px;
+    left: -5px
+  }
+
+  #contact-icon>span {
+    display: none;
+  }
+
   #splash-red-triangle {
     width: 37.5px;
   }
@@ -161,7 +218,6 @@ li {
     margin: 0 auto !important;
     width: 90%;
   }
-
 }
 
 
@@ -240,6 +296,7 @@ li {
 
   #project-header {
     flex-direction: column;
+    width: 95%;
   }
 
   #projects {
@@ -310,6 +367,7 @@ li {
   #about-bottom-border {
     display: none;
   }
+
   #about {
     min-height: 1100px !important;
   }
@@ -390,6 +448,7 @@ li {
   #owner {
     display: none;
   }
+
   .about-header {
     background-image: url("/images/grittyBg.jpg");
     flex-direction: column;
@@ -469,7 +528,7 @@ li {
   justify-content: center;
   align-items: center;
 
-bottom: 0;
+  bottom: 0;
 }
 
 #contact>* {
@@ -526,7 +585,8 @@ textarea {
   align-items: center;
   color: white;
   margin-left: 150px;
-  font-size: 15px;;
+  font-size: 15px;
+  ;
 }
 
 #map-pin {
@@ -559,15 +619,15 @@ textarea {
   }
 
   #contact-details {
-  margin: 0 auto;
-  padding-bottom: 45px;
+    margin: 0 auto;
+    padding-bottom: 45px;
   }
 
   #contact-num {
     font-size: 50px;
     margin-top: 50px;
     text-align: center;
-}
+  }
 
   #map-pin {
     display: none;
